html files for students and teachers created

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-  <title>JA ICCHA TAI</title>
+  <title>Section Delta, SAGC</title>
   </head>
   <body>
   <table height="600" width="800" align="center">
   <tr><td height="15%" colspan="4" align="center" bgcolor="light green">
   <h1>DELTA OF SAGC</h1></td></tr>
-  <tr><td height="5%" width="25%" align="center" bgcolor="green"><a href="SOFTWARE.html">TEACHERS</a></td>
-  <td height="5%" width="25%" align="center" bgcolor="green"><a href="SOFTWARE.html">STUDENTS</a></td></tr>
+  <tr><td height="5%" width="25%" align="center" bgcolor="green"><a href="teacher.html">TEACHERS</a></td>
+  <td height="5%" width="25%" align="center" bgcolor="green"><a href="student.html">STUDENTS</a></td></tr>
   <table border="1" align="center">
     <tr>
       <td colspan="2" align="center">TEACHERS</td></tr>
@@ -22,4 +22,4 @@
   <tr><td height="5%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy DELTA.com</b></td></tr>
   </table>
   </body>
-  </html>
+</html>
