modified index.html and added information in teacher.html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <html>
   <head>
   <title>Section Delta, SAGC</title>
+  <style> h1{
+    color: black;
+    font-family: verdana;
+    font-size:300%}
+    h2{
+      color: black;
+      font-family: courier;
+      font-size:160%;}
+      </style>
   </head>
   <body>
-  <table height="600" width="800" align="center">
-  <tr><td height="15%" colspan="4" align="center" bgcolor="light green">
-  <h1>DELTA OF SAGC</h1></td></tr>
-  <tr><td height="5%" width="25%" align="center" bgcolor="green"><a href="teacher.html">TEACHERS</a></td>
-  <td height="5%" width="25%" align="center" bgcolor="green"><a href="student.html">STUDENTS</a></td></tr>
-  <table border="1" align="center">
-    <tr>
-      <td colspan="2" align="center">TEACHERS</td></tr>
-      <tr><td>NAME</td><td>SUBJECTS</td></tr>
-      <tr><td>DR. TAHMINA JAMALI</td><td>BIOLOGY</td></tr>
-      <tr><td>NUSRAT JAHAN</td><td>BIOLOGY</td></tr>
-      <tr><td>BONY BENJIR</td><td>BIOLOGY</td></tr>
-      <tr><td>AFROJA BULBUL</td><td>MATHEMATICS</td></tr>
-  </table>>
-    <tr>
-  <tr><td colspan="4" align="center" bgcolor="violet"><a href="SOFTWARE.html"><h1>WELCOME TO DELTA</h1><br></td>></tr>>
-  <tr><td height="5%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy DELTA.com</b></td></tr>
+  <h1 align="center">Welcome to Delta</h1><br><h2 align="center">Delta of SAGC</h2>
+  <nav align="center"><a href="teacher.html">TEACHERS</a>
+  <a href="student.html">STUDENTS</a>
+  </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <h3 height="5%" width="25%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy section_dELTA,sagc</b></h3>
   </table>
   </body>
 </html>
