--- a/teacher.html
+++ b/teacher.html
@@ -5,7 +5,16 @@
 </head>
 <body>
 
-<h1>Teachers of section Delta</h1>
-<p>Here goes the table</p>
+<h1 align="center">Teachers of section Delta</h1>
+<table border="1" align="center">
+    <tr>
+      <td colspan="2" align="center">TEACHERS</td></tr>
+      <tr><td>NAME</td><td>SUBJECTS</td></tr>
+      <tr><td>DR. TAHMINA JAMALI</td><td>BIOLOGY</td></tr>
+      <tr><td>NUSRAT JAHAN</td><td>BIOLOGY</td></tr>
+      <tr><td>BONY BENJIR</td><td>BIOLOGY</td></tr>
+      <tr><td>AFROJA BULBUL</td><td>MATHEMATICS</td></tr>
+  </table>
+    
 </body>
 </html>
