little bit of cleanup

--- a/index.html
+++ b/index.html
@@ -1,47 +1,29 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  <title>Section Delta, SAGC</title>
-  <style> h1{
-    color: black;
-    font-family: verdana;
-    font-size:300%}
-    h2{
-      color: black;
-      font-family: courier;
-      font-size:160%;}
-      </style>
-  </head>
-  <body>
-  <h1 align="center">Welcome to Delta</h1><br><h2 align="center">Delta of SAGC</h2>
-  <nav align="center"><a href="teacher.html">TEACHERS</a>
-  <a href="student.html">STUDENTS</a>
-  </nav>
+<head>
+    <title>Section Delta, SAGC</title>
+    <style>
+        h1 {
+            color: black;
+            font-family: verdana;
+            font-size: 300%
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <h3 height="5%" width="25%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy section_dELTA,sagc</b></h3>
-  </table>
-  </body>
+        h2 {
+            color: black;
+            font-family: courier;
+            font-size: 160%;
+        }
+    </style>
+</head>
+<body>
+<h1 align="center">Welcome to Delta</h1>
+<br/>
+<h2 align="center">Delta of SAGC</h2>
+<nav align="center">
+    <a href="teacher.html">TEACHERS</a>
+    <a href="student.html">STUDENTS</a>
+</nav>
+<h3 height="5%" width="25%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy section_dELTA,sagc</b></h3>
+</body>
 </html>
