modified index.html and teacher.html

--- a/index.html
+++ b/index.html
@@ -8,40 +8,16 @@
     h2{
       color: black;
       font-family: courier;
-      font-size:160%;}
+      font-size:200%;}
       </style>
   </head>
-  <body>
-  <h1 align="center">Welcome to Delta</h1><br><h2 align="center">Delta of SAGC</h2>
-  <nav align="center"><a href="teacher.html">TEACHERS</a>
+  <body bgcolor="PapayaWhip">
+      <h1 align="center">Welcome to Delta</h1><br><h2 align="center">Delta of SAGC</h2>
+      <nav align="center">
+      <a href="teacher.html">TEACHERS</a>
   <a href="student.html">STUDENTS</a>
   </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <h3 height="5%" width="25%" colspan="4" align="center" bgcolor="white">COPYRIGHT &copy section_dELTA,sagc</b></h3>
+  <h3 height="5%" width="25%" colspan="4" align="center" bgcolor="white">Copyright &copy section_delta,sagc</b></h3>
   </table>
   </body>
 </html>
