--- a/student.html
+++ b/student.html
@@ -2,13 +2,21 @@
 <html>
 <head>
 <title>Students of Section Delta</title>
+<style>
+	table, td {
+		border: 1px solid black;
+		border-collapse: collapse;
+		padding: 10px;
+			}
+</style>
 </head>
 <body>
 
 <h1 align="center">Students of section Delta</h1>
 <table height="100%" width="60%" border="1" align="center">
-	<tr><td align="center"><b><i>ROLL</i></b></td>
-	<td align="center"><b><i>NAME</i></b></td></tr>
+	<tr><th align="center">ROLL</th>
+	<th align="center">NAME</th>
+	</tr>
 	<tr>
 		<td>4201</td>
 		<td>Sithi Sikder</td>
