--- a/teacher.html
+++ b/teacher.html
@@ -2,26 +2,102 @@
 <html>
 <head>
 <title>Teachers of Section Delta</title>
+<style>
+  table, th, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+  }
+</style>
 </head>
 <body bgcolor="PapayaWhip">
 
-<h1 align="center">Teachers of section Delta</h1>
-<table height="160%" width="80%" border="1" align="center">
-    <tr>
-      <tr><td align="center"><b><i>NAME</i></b></td><td align="center"><b><i>SUBJECTS</i></b></td><td align="center"><b><i>DESIGNATION</i></b></td><td align="center"><b><i>ID</i></b></td></tr>
-      <tr><td>DR. Tahmina Jamali</td><td>Botany</td><td>Asst. Professor</td><td>1009</td></tr>
-      <tr><td>Nusrat Jahan</td><td>Botany & Zoology</td><td>Lecturer</td><td>1063</td></tr>
-      <tr><td>Bony Benjir</td><td>Zoology</td><td>Lecturer</td><td>1033</td></tr>
-      <tr><td>Afroja Bulbul</td><td>Mathematics</td><td>Lecturer</td><td>1035</td></tr>
-      <tr><td>Sukhendu Bikash Saha</td><td>Mathematics</td><td>Lecturer</td><td>1032</td></tr>
-      <tr><td>Md. Abdur Rahman</td><td>Physics</td><td>Asst. Professor</td><td>1006</td></tr>
-      <tr><td>Khandaker Papiya Sultana</td><td>Physics</td><td>Asst. Professor</td><td>1024</td></tr>
-      <tr><td>Zebunnesa</td><td>Chemistry</td><td>Asst. Professor</td><td>1025</td></tr>
-      <tr><td>Shahana Shajada</td><td>Bangla</td><td>Lecturer</td><td>1034</td></tr>
-      <tr><td>Alok Kumar Chakrabortty</td><td>Bangla</td><td>Lecturer</td><td>1036</td></tr>
-      <tr><td>S. M. Arman</td><td>English</td><td>Lecturer</td><td>1043</td></tr>
-      <tr><td>Samina Meheli</td><td>English</td><td>Asst. Professor</td><td>1020</td></tr>
-      <tr><td>A K M Zahurul Haque</td><td>ICT</td><td>Lecturer</td><td>1061</td></tr>
+  <h1 align="center">Teachers of section Delta</h1>
+  <table height="160%" width="80%" border="1" align="center">
+      <tr>
+          <th align="center">NAME</th>
+          <th align="center">SUBJECTS</th>
+          <th align="center">DESIGNATION</th>
+          <th align="center">ID</th>
+      </tr>
+      <tr>
+          <td>DR. Tahmina Jamali</td>
+          <td>Botany</td>
+          <td>Asst. Professor</td>
+          <td>1009</td>
+      </tr>
+      <tr>
+          <td>Nusrat Jahan</td>
+          <td>Botany & Zoology</td>
+          <td>Lecturer</td>
+          <td>1063</td>
+      </tr>
+      <tr>
+          <td>Bony Benjir</td>
+          <td>Zoology</td>
+          <td>Lecturer</td>
+          <td>1033</td>
+      </tr>
+      <tr>
+          <td>Afroja Bulbul</td>
+          <td>Mathematics</td>
+          <td>Lecturer</td>
+          <td>1035</td>
+      </tr>
+      <tr>
+          <td>Sukhendu Bikash Saha</td>
+          <td>Mathematics</td>
+          <td>Lecturer</td>
+          <td>1032</td>
+      </tr>
+      <tr>
+          <td>Md. Abdur Rahman</td>
+          <td>Physics</td>
+          <td>Asst. Professor</td>
+          <td>1006</td>
+      </tr>
+      <tr>
+          <td>Khandaker Papiya Sultana</td>
+          <td>Physics</td>
+          <td>Asst. Professor</td>
+          <td>1024</td>
+      </tr>
+      <tr>
+          <td>Zebunnesa</td>
+          <td>Chemistry</td>
+          <td>Asst. Professor</td>
+          <td>1025</td>
+      </tr>
+      <tr>
+          <td>Shahana Shajada</td>
+          <td>Bangla</td>
+          <td>Lecturer</td>
+          <td>1034</td>
+      </tr>
+      <tr>
+          <td>Alok Kumar Chakrabortty</td>
+          <td>Bangla</td>
+          <td>Lecturer</td>
+          <td>1036</td>
+      </tr>
+      <tr>
+          <td>S. M. Arman</td>
+          <td>English</td>
+          <td>Lecturer</td>
+          <td>1043</td>
+      </tr>
+      <tr>
+          <td>Samina Meheli</td>
+          <td>English</td>
+          <td>Asst. Professor</td>
+          <td>1020</td>
+      </tr>
+      <tr>
+          <td>A K M Zahurul Haque</td>
+          <td>ICT</td>
+          <td>Lecturer</td>
+          <td>1061</td>
+      </tr>
   </table>
     
 </body>
