modified index.html, student.html,teacher.html

--- a/student.html
+++ b/student.html
@@ -10,7 +10,7 @@
 			}
 </style>
 </head>
-<body>
+<body bgcolor="PapayaWhip">
 
 <h1 align="center">Students of section Delta</h1>
 <table height="100%" width="60%" border="1" align="center">
@@ -18,67 +18,67 @@
 	<th align="center">NAME</th>
 	</tr>
 	<tr>
-		<td>4201</td>
+		<td align="center">4201</td>
 		<td>Sithi Sikder</td>
 	</tr>
 	<tr>
-		<td>4202</td>
+		<td align="center">4202</td>
 		<td>Mansura Yasmin</td>
 	</tr>
 	<tr>
-		<td>4203</td>
+		<td align="center">4203</td>
 		<td>Taiba Rahman</td>
 	</tr>
 	<tr>
-		<td>4204</td>
+		<td align="center">4204</td>
 		<td>Gulshan Ara</td>
 	</tr>
 	<tr>
-		<td>4205</td>
+		<td align="center">4205</td>
 		<td>Faiza Zabin</td>
 	</tr>
 	<tr>
-		<td>4206</td>
+		<td align="center">4206</td>
 		<td>Ayesha Siddika Jim</td>
 	</tr>
 	<tr>
-		<td>4207</td>
+		<td align="center">4207</td>
 		<td>Rima Akter</td>
 	</tr>
 	<tr>
-		<td>4208</td>
+		<td align="center">4208</td>
 		<td>Tanha Rahman</td>
 	</tr>
 	<tr>
-		<td>4209</td>
+		<td align="center">4209</td>
 		<td>Dil Zahan</td>
 	</tr>
 	<tr>
-		<td>4210</td>
+		<td align="center">4210</td>
 		<td>nil</td>
 	</tr>
 	<tr>
-		<td>4211</td>
+		<td align="center">4211</td>
 		<td>Mashrafe Haque</td>
 	</tr>
 	<tr>
-		<td>4213</td>
+		<td align="center">4213</td>
 		<td>Sifat Samia Islam </td>
 	</tr>
 	<tr>
-		<td>4214</td>
+		<td align="center">4214</td>
 		<td>Khadizatul Kobra</td>
 	</tr>
 	<tr>
-		<td>4215</td>
+		<td align="center">4215</td>
 		<td>Sumaiya Islam Shemonti</td>
 	</tr>
 	<tr>
-		<td>4216</td>
+		<td align="center">4216</td>
 		<td>Raisa Islam</td>
 	</tr>
 	<tr>
-		<td>1</td>
+		<td align="center">1</td>
 		<td>1</td>
 	</tr>
 </table>
