--- a/teacher.html
+++ b/teacher.html
@@ -24,79 +24,79 @@
           <td>DR. Tahmina Jamali</td>
           <td>Botany</td>
           <td>Asst. Professor</td>
-          <td>1009</td>
+          <td align="center">1009</td>
       </tr>
       <tr>
           <td>Nusrat Jahan</td>
           <td>Botany & Zoology</td>
           <td>Lecturer</td>
-          <td>1063</td>
+          <td align="center">1063</td>
       </tr>
       <tr>
           <td>Bony Benjir</td>
           <td>Zoology</td>
           <td>Lecturer</td>
-          <td>1033</td>
+          <td align="center">1033</td>
       </tr>
       <tr>
           <td>Afroja Bulbul</td>
           <td>Mathematics</td>
           <td>Lecturer</td>
-          <td>1035</td>
+          <td align="center">1035</td>
       </tr>
       <tr>
           <td>Sukhendu Bikash Saha</td>
           <td>Mathematics</td>
           <td>Lecturer</td>
-          <td>1032</td>
+          <td align="center">1032</td>
       </tr>
       <tr>
           <td>Md. Abdur Rahman</td>
           <td>Physics</td>
           <td>Asst. Professor</td>
-          <td>1006</td>
+          <td align="center">1006</td>
       </tr>
       <tr>
           <td>Khandaker Papiya Sultana</td>
           <td>Physics</td>
           <td>Asst. Professor</td>
-          <td>1024</td>
+          <td align="center">1024</td>
       </tr>
       <tr>
           <td>Zebunnesa</td>
           <td>Chemistry</td>
           <td>Asst. Professor</td>
-          <td>1025</td>
+          <td align="center">1025</td>
       </tr>
       <tr>
           <td>Shahana Shajada</td>
           <td>Bangla</td>
           <td>Lecturer</td>
-          <td>1034</td>
+          <td align="center">1034</td>
       </tr>
       <tr>
           <td>Alok Kumar Chakrabortty</td>
           <td>Bangla</td>
           <td>Lecturer</td>
-          <td>1036</td>
+          <td align="center">1036</td>
       </tr>
       <tr>
           <td>S. M. Arman</td>
           <td>English</td>
           <td>Lecturer</td>
-          <td>1043</td>
+          <td align="center">1043</td>
       </tr>
       <tr>
           <td>Samina Meheli</td>
           <td>English</td>
           <td>Asst. Professor</td>
-          <td>1020</td>
+          <td align="center">1020</td>
       </tr>
       <tr>
           <td>A K M Zahurul Haque</td>
           <td>ICT</td>
           <td>Lecturer</td>
-          <td>1061</td>
+          <td align="center">1061</td>
       </tr>
   </table>
     
