modified and updated techer.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<a href="teacher.html">TEACHERS</a>
 		<a href="student.html">STUDENTS</a>
 	</nav>
-	<h3 align="center" bgcolor="white">Copyright &copy Section Delta, SAGC</h3>
+	<div align="center">
+		<img src="sagc.jpeg" height="400px" width="700px">
+	</div>
+	<h3 align="center">Copyright &copy Section Delta, SAGC</h3>
 </body>
 </html>
