--- a/teacher.html
+++ b/teacher.html
@@ -99,6 +99,10 @@
           <td align="center">1061</td>
       </tr>
   </table>
-    
+  <br>
+  <br>
+  <div align="center">
+    <a href="newTeachers.html">New Teachers</a>
+  </div>  
 </body>
 </html>
