gave a new look to section-delta

--- a/student.html
+++ b/student.html
@@ -3,20 +3,21 @@
 <head>
 <title>Students of Section Delta</title>
 <style>
-	table, td {
+	table, td { color: White;
 		border: 1px solid black;
 		border-collapse: collapse;
 		padding: 10px;
 			}
 		th {padding: 10px;
+			color: White;
 
 		}	
 </style>
 </head>
-<body bgcolor="PapayaWhip">
+<body>
 
 <h1 align="center">Students of section Delta</h1>
-<table height="100%" width="60%" border="1" align="center">
+<table bgcolor="black" height="100%" width="60%" border="1" bordercolor="White" align="center">
 	<tr><th align="center">ROLL</th>
 	<th align="center">NAME</th>
 	</tr>
