modified student.html and teacher.html

--- a/teacher.html
+++ b/teacher.html
@@ -3,14 +3,19 @@
 <head>
 <title>Teachers of Section Delta</title>
 <style>
-  table, th, td{
-    border: 1px solid black;
+  table, td { color: White;
+    background: black;
+    border: 1px solid gray;
     border-collapse: collapse;
     padding: 10px;
-  }
+      }
+    th {padding: 10px;
+      color: White;
+
+    } 
 </style>
 </head>
-<body bgcolor="PapayaWhip">
+<body bgcolor="black">
 
   <h1 align="center">Teachers of section Delta</h1>
   <table height="160%" width="80%" border="1" align="center">
