--- a/student.html
+++ b/student.html
@@ -4,7 +4,8 @@
 <title>Students of Section Delta</title>
 <style>
 	table, td { color: White;
-		border: 1px solid black;
+		background: black;
+		border: 1px solid gray;
 		border-collapse: collapse;
 		padding: 10px;
 			}
@@ -14,7 +15,7 @@
 		}	
 </style>
 </head>
-<body>
+<body bgcolor="black">
 
 <h1 align="center">Students of section Delta</h1>
 <table bgcolor="black" height="100%" width="60%" border="1" bordercolor="White" align="center">
